<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Login" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YpL-pZ-mvM">
                                <rect key="frame" x="36" y="334.5" width="303" height="110"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7TU-4Y-TYJ">
                                        <rect key="frame" x="0.0" y="0.0" width="303" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="thI-Nq-VGj">
                                        <rect key="frame" x="0.0" y="40" width="303" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fi8-Fh-X4f">
                                        <rect key="frame" x="0.0" y="80" width="303" height="30"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v9F-ja-YF4">
                                                <rect key="frame" x="0.0" y="0.0" width="146.5" height="30"/>
                                                <state key="normal" title="Sign In"/>
                                                <connections>
                                                    <action selector="signIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vsz-J6-Brh"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yf7-bi-Ddp">
                                                <rect key="frame" x="156.5" y="0.0" width="146.5" height="30"/>
                                                <state key="normal" title="Sign Up">
                                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="signUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xx8-Lz-eh0"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yagom" translatesAutoresizingMaskIntoConstraints="NO" id="Bgq-pF-I7Y">
                                <rect key="frame" x="60" y="0.0" width="255" height="334.5"/>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Bgq-pF-I7Y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="60" id="8BW-hw-vfn"/>
                            <constraint firstItem="Bgq-pF-I7Y" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bKT-qh-5dQ"/>
                            <constraint firstAttribute="trailingMargin" secondItem="YpL-pZ-mvM" secondAttribute="trailing" constant="20" id="h1L-d3-BbM"/>
                            <constraint firstItem="YpL-pZ-mvM" firstAttribute="top" secondItem="Bgq-pF-I7Y" secondAttribute="bottom" id="iEj-Nz-dxV"/>
                            <constraint firstAttribute="trailing" secondItem="Bgq-pF-I7Y" secondAttribute="trailing" constant="60" id="m87-z9-7a8"/>
                            <constraint firstItem="YpL-pZ-mvM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nIz-6R-1OW"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YpL-pZ-mvM" secondAttribute="bottom" multiplier="1.5:1" id="oHL-eI-EsL"/>
                            <constraint firstItem="YpL-pZ-mvM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="u2h-Sg-BY4"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="idTextField" destination="7TU-4Y-TYJ" id="dk8-Or-cX9"/>
                        <outlet property="passwordTextField" destination="thI-Nq-VGj" id="1df-yc-26f"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
    <resources>
        <image name="yagom" width="1183" height="1138"/>
    </resources>
</document>
